Feature - Cleaning up first initial implementation of TopN. Only sort by AVERAGE of metric is supported. Added the definitions to swagger.
