# datastore/druidDatastore.go
@@ -57,7 +57,7 @@ type DruidDatastore interface {
 
 	// Get aggregated metrics from druid
 	GetAggregatedMetrics(request *metrics.AggregateMetricsAPIRequest) (map[string]interface{}, error)
-	GetTopNForMetricAvg(metric *metrics.TopNForMetric) (map[string]interface{}, error)
+	GetTopNForMetric(metric *metrics.TopNForMetric) (map[string]interface{}, error)
 
 	// Update Monitored Object meta-data
 	UpdateMonitoredObjectMetadata(tenantID string, monitoredObjects []*tenmod.MonitoredObject, domains []*tenmod.Domain, reset bool) error
